@@ -7,6 +7,7 @@ import edu.wpi.FlashyFrogs.ORM.Node;
 import io.github.palexdev.materialfx.utils.others.TriConsumer;
 import java.util.*;
 import java.util.function.BiConsumer;
+import java.util.stream.Collectors;
 import javafx.scene.layout.VBox;
 import javafx.scene.shape.Circle;
 import javafx.scene.shape.Line;
@@ -60,11 +61,14 @@ class MapEntity {
    *
    * @param mapFloor the new floor to set
    */
-  void setMapFloor(@NonNull Node.Floor mapFloor) {
+  void setMapFloor(Node.Floor mapFloor) {
     this.mapFloor = mapFloor;
 
     nodeToCircleMap.clear();
     edgeToLineMap.clear();
+    locationNameToTextMap.clear();
+    nodeToLocationNameMap.clear();
+    nodeToLocationBox.clear();
   }
 
   /**
@@ -130,7 +134,7 @@ class MapEntity {
     List<Edge> edgesToRemove =
         edgeToLineMap.keySet().stream()
             .filter((edge) -> (edge.getNode1().equals(node) || edge.getNode2().equals(node)))
-            .toList();
+            .collect(Collectors.toList());
 
     // For each edge to remove
     for (Edge toRemove : edgesToRemove) {
